--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sticky Notes</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Supabase JS SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.0.0/dist/supabase.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@latest"></script>
 </head>
 <body>
     <div id="noteContainer"></div>
