--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sticky Notes</title>
+    <title>Notes App</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Supabase JS SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@latest"></script>
 </head>
 <body>
-    <div id="noteContainer"></div>
-    <div id="noteForm">
-        <input type="text" id="noteTitle" placeholder="Enter note title">
-        <textarea id="noteContent" placeholder="Enter note content"></textarea>
+    <div>
+        <input type="text" id="noteTitle" placeholder="Title">
+        <textarea id="noteContent" placeholder="Content"></textarea>
         <button onclick="addNote()">Add Note</button>
     </div>
+    <div id="noteContainer"></div>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@latest"></script>
     <script src="script.js"></script>
 </body>
 </html>
