--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </div>
     <div id="noteContainer"></div>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@latest"></script>
-    <script src="../script.js"></script>
+    <script src="/script.js"></script> <!-- Ensure this path is correct -->
 </body>
 </html>
